--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <div class="text-center">
             <div style="background-color: #062c4b; color: white; font-size: 30px;">歡迎光臨，請輸入帳號密碼</div><br>
             <h4>註冊帳號</h4>        
-            <form action="/register" method="POST">
+            <form action="/signup" method="POST">
             <label>姓名</label>
             <input type="text" name="name"><br>
             <label>帳號</label>
